# IOTester

./: Arch.txt  pyproject.toml  requirements.txt  setup.py  switch_to_hardware.bat  switch_to_localhost.bat
.github/: copilot-instructions.md
ControllPinMapper/: ControllPinMapper.ino
ControllinoSerialInterface/: ControllinoSerialInterface.ino
sketch_keepalive/: sketch_keepalive.ino
src/hw_tester/: app.py
src/hw_tester/config/: board_pin_config.json  connector_Address_A_map.xlsx  connector_Address_B_map.xlsx  connector_Address_map.xlsx  pin_map.json  settings.yaml  settings.yaml.backup
src/hw_tester/config/OLD/: connector_Address_A_map.xlsx  connector_Address_B_map.xlsx
src/hw_tester/core/: OneSimLinkWrapper.py  SE_Command.py  localhost_simulator.py  measurer.py  pin_pulser.py  udp_card_manager.py  udp_data_mapper.py  udp_sender.py
src/hw_tester/hardware/: __init__.py  controllino_io.py  hardware_factory.py  pin.py
src/hw_tester/ui/: copilot_prompt_tkinter_ui_for_hw_tester.md  main_window.py
src/hw_tester/ui/views/: __init__.py  log_view.py  (+2 more)
src/hw_tester/utils/: __init__.py  config_loader.py  general.py  read_excell.py
tests/: Basic_Test.py
tests/DB/Demo/: JDemo.xlsx  J_Demo.xlsx
tests/DB/MTC_AFT/: J17_Armant_1.xlsx  J1_Routing Information.xlsx  all_income.inx  all_income_off.inx  all_income_on.inx  powerdown_MTC_AFT.json  powerup_MTC_AFT.json
tests/DB/MTC_FWD/: J17_Armant.xlsx  powerdown_MTC_FWD.json  powerup_MTC_FWD.json
tests/DB/simulator_responses/: README.md  card1.txt  card2.txt  card3.txt  card4.txt  card5.txt  card6.txt  card7.txt
